# obelisk-ghcjs-frontend

./: obelisk-ghcjs-frontend.cabal
src/: main.hs
