name: obelisk-ghcjs-frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple


-- Build W Ghcjs
executable obelisk-ghcjs-frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , frontend
               , frontend-unconstrained
               , bytestring
               , reflex-dom
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic

